--- a/src/styles.css
+++ b/src/styles.css
@@ -109,8 +109,8 @@
  .noUi-target {
    background: #BFBFBF;
    border-radius: 4px;
-   /* border: 1px solid #D3D3D3;
-   box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB; */
+   border: none;
+   box-shadow: none;
  }
  .noUi-connects {
    border-radius: 3px;
@@ -127,28 +127,22 @@
    cursor: ns-resize;
  }
  .noUi-handle {
-   /* border: 1px solid #D9D9D9; */
-   border-radius: 60px;
-   background: #4E7766;
-   cursor: default;
-   /* box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB; */
+    border: none;
+    border-radius: 60px;
+    background: #4E7766;
+    cursor: default;
+    box-shadow: none;
  }
  .noUi-active {
    box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
  }
  /* Handle stripes;
   */
- /* .noUi-handle:before,
+ .noUi-handle:before,
  .noUi-handle:after {
    content: "";
-   display: block;
-   position: absolute;
-   height: 8px;
-   width: 1px;
-   background: #6a6a6a;
-   left: 7px;
-   top: 8px;
- } */
+   display: none;
+ }
  .noUi-handle:after {
    left: 17px;
  }
